# agex

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  jupyter-lite.json  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: deploy-docs.yml  docs.yml  publish-test.yml  publish.yml  test.yml
agex/: __init__.py  patterns.py
agex/agent/: __init__.py  base.py  console.py  conversation.py  datatypes.py  events.py  fingerprint.py  formatting.py  loop.py  primer_text.py  registration.py  task.py  task.pyi  task_messages.py  utils.py
agex/bench/: aggregators.py  core.py  types.py
agex/eval/: base.py  binop.py  builtins.py  call.py  constants.py  core.py  expressions.py  functions.py  loops.py  objects.py  resolver.py  safe.py  statements.py  utils.py  validation.py
agex/helpers/: __init__.py  numpy_helper.py  pandas.py  pandas_helper.py  pandas_registry.py  plotly_helper.py  stdlib.py
agex/llm/: __init__.py  anthropic_client.py  config.py  core.py  dummy_client.py  gemini_client.py  openai_client.py
agex/render/: context.py  definitions.py  stream.py  value.py  view.py
agex/state/: __init__.py  closure.py  core.py  log.py  namespaced.py  scoped.py  transient.py  versioned.py
agex/tokenizers/: __init__.py
benchmarks/: __init__.py  excel_analysis_bench.py  excel_analysis_data.csv  funcy_bench.py
docs/: agex-and-mcp.md  announce.md  benchmarking.md  big-picture.md  demo.md  faded-memory.md  index.md  nearly-python.md  pmap.md  quick-start.md  roadmap.py  security.md  setup-guide.md  smaller-picture.md  todo-confirmation.md  todo-contextual-primers.md  todo-deferred-improvements.md  todo-ephemeral-default.md  todo-event-log.md  todo-faded-memory.md  todo-interpreter.md  todo-jupyter-lite.md  todo-local-registries-for-dynamic-agents.md  todo-mime.md  todo-persistent-workspace-demo.md  todo-pmap.md  todo-streaming.md  todo-system-tokens.md  todo-vision.md  top-level.md
docs/api/: agent.md  benchmarking.md  errors.md  events.md  helpers.md  overview.md  registration.md  state.md  task.md  (+1 more)
examples/: adam.py  data.py  db.py  db_primer.py  dogfood.py  dogfood_primer.py  evaluator_optimizer.py  funcy.py  hierarchical.py  hierarchical_composed.py  mathy.py  multi.py  routy-a.html  routy-b.html  routy.py  vision_plot.py  viz.py
tic/: __init__.py  agent.py
(+185 files in other folders)
