[project]
name = "tic"
version = "0.1.0"
description = "Python emulation for agents."
requires-python = ">=3.12"
dependencies = [
    "tiktoken",
    "xxhash",
    "diskcache",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]
test = [
    "pytest",
    "numpy",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]