[project]
name = "agex"
version = "0.1.0"
description = "Python emulation for agents."
requires-python = ">=3.12"
dependencies = [
    "tiktoken",
    "xxhash",
    "diskcache",
    "openai",
    "instructor",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]
test = [
    "pytest",
    "numpy",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.39.2"
tiktoken = "^0.6.0"
instructor = "^1.2.1"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"