[project]
name = "agex"
version = "0.1.0"
description = "Python emulation for agents."
requires-python = ">=3.12"
dependencies = [
    "tiktoken",
    "xxhash", 
    "diskcache",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]
test = [
    "pytest",
    "numpy",
]
examples = [
    "plotly[express]",
    "kaleido",  # for exporting plotly figures
    "numpy",
    "nbformat",
    "pandas",
    "sqlite3",
]
# LLM provider dependencies
openai = [
    "openai",
]
anthropic = [
    "anthropic",
]
gemini = [
    "google-generativeai",
]
# Convenience group for all providers
all-providers = [
    "openai",
    "anthropic", 
    "google-generativeai",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.39.2"
tiktoken = "^0.6.0"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
